# carpet-database

./: .gitignore  CNAME  Cargo.toml  README.md  combine.py  gen_template_mods.ts  index.html  main.py  mods.toml  repos.toml  run.sh  run_one.sh  stats.md  update_repos_json.py
.github/workflows/: update.yml
assets/: logo.xcf
data/: CarpetSkyAdditions-1.16.5.json  CarpetSkyAdditions-1.17.json  CarpetSkyAdditions-1.18.json  CarpetSkyAdditions-1.19.json  FracturedCode-XpBeacons-master.json  Lunaar-SMP-lunaar-carpet-addons-1.16.json  Lunaar-SMP-lunaar-carpet-addons-1.17.json  Lunaar-SMP-lunaar-carpet-addons-1.18.json  RubixDev-Rug-1.16.json  RubixDev-Rug-1.17.json  RubixDev-Rug-1.18.json  RubixDev-Rug-1.19.json  Rug-1.16.json  Rug-1.17.json  Rug-1.18.json  Rug-1.19.json  XpBeacons-master.json  anvil-crush-1.18.json  anvil-crush-1.19.json  bastion-carpet-1.16.json  carpet-1.14.json  carpet-1.15.json  carpet-1.16.json  carpet-1.17.json  carpet-1.18.json  carpet-1.19.json  carpet-1.20.json  carpet-addons-1.15.2.json  carpet-addons-1.15.json  carpet-addons-1.16.json  carpet-addons-1.16.x.json  carpet-addons-1.17.json  carpet-addons-1.18.json  carpet-addons-1.18.x.json  carpet-addons-not-found-1.17.json  carpet-addons-not-found-1.18.json  carpet-addons-not-found-1.19.json  carpet-addons-not-found-1.20.json  carpet-ams-addition-1.16.json  carpet-ams-addition-1.17.json  (+205 more)
printers/: MagicLibV1Printer.java  MagicLibV2Printer.java  SettingsManagerAccessor.java  V1Printer.java  V2Printer.java  V3Printer.java
src/: main.rs  schema.rs  update.rs
