[package]
name = "carpet-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.74", features = ["backtrace"] }
itertools = "0.11.0"
lazy-regex = "3.0.1"
once_cell = "1.18.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["preserve_order"] }
toml = "0.7.6"
xshell = "0.2.5"
