[package]
name = "carpet-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
update = ["dep:ferinth", "dep:chrono"]

[dependencies]
anyhow = { version = "1.0.74", features = ["backtrace"] }
chrono = { version = "0.4.26", optional = true }
ferinth = { version = "2.9.2", optional = true }
fs_extra = "1.3.0"
itertools = "0.11.0"
lazy-regex = "3.0.1"
once_cell = "1.18.0"
reqwest = { version = "0.11.18" }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["preserve_order"] }
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "process", "macros", "io-util"] }
toml = "0.7.6"
xshell = "0.2.5"
